--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
