--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^1.2.0",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.6.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
