--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dockerize": "npm run build && docker image build --tag redux-demo:1.0.0 ."
   },
   "eslintConfig": {
     "extends": [
